login link added for mobile, alignment of checkboxes fixed for medium and mobile bp

--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -22,6 +22,10 @@ body {
     }
 }
 
+.top-bar-right {
+    display: none;
+}
+
 header {
     position: fixed;
     width: 100%;
@@ -32,6 +36,21 @@ header {
 @media screen and (max-width: 39.9375em) {
     header {
         position: static;
+    }
+
+    .top-bar-right {
+        display: block;
+        width: 40% !important;
+
+        li {
+            display: block;
+            text-align: right;
+            padding: 22px 20px;
+        }
+    }
+
+    .top-bar-left {
+        width: 60% !important;
     }
 }
 
